# dispatcher

./: Makefile  Makefile.am  configure.ac  dispatcher.c  dispatcher.h  miio_dispatcher.c  miio_dispatcher.h  register.c
src/: dispatcher_client.c  miio_agent.c  miio_agent.h  miio_dispatcher.c  miio_json.c
